# sqpack

./: Cargo.toml  NOTICE  README.md  rustfmt.toml
src/: error.rs  hash.rs  hash_consts.rs  lib.rs  sqpath.rs
src/io/: error.rs  mod.rs  sqfile.rs
src/io/dat/: mod.rs  sqfile.rs
src/io/index/: index_cache.rs  mod.rs  reader.rs
tests/: integration.rs
