[package]
name = "sqpack"
description = "Library for reading FFXIV data files (sqpack/.dat .index)"
version = "0.1.0"
authors = ["Cerulan Lumina <CerulanLumina@users.noreply.github.com>"]
license = "Apache-2.0"
repository = "https://github.com/CerulanLumina/sqpack"
homepage = "https://github.com/CerulanLumina/sqpack"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"
